# simple-python-package-example

./: .gitignore  BUILD.md  README.txt  pyproject.toml  setup.cfg  tox.ini
src/reverse/: reverse_number.py
tests/: test_reverse_number.py
