[metadata]
name = simple-python-package
version = 0.0.1
author = vi4hu
author_email = rain.reachme@protonmail.com
description = A simple example package
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/vi4hu/simple-python-package-example
project_urls =
    Bug Tracker = https://github.com/vi4hu/simple-python-package-example/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = https://github.com/vi4hu/simple-python-package-example
